--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+/* @font-face {
+  font-family: "Dancing Script";
+  src: url('../public/assets/Dancing_Script/DancingScript-VariableFont_wght.ttf');
+} */
+
 html,
+
+:root {
+  --main-primary: #0d137a;
+  --font-primary: #fff;
+  --main-primary-trans: #0d127a4b;
+  --main-primary-dark: #000;
+  --main-primary-dark-trans: rgba(0, 0, 0, 0.466);
+}
+
+:root::-webkit-scrollbar {
+  width:8px;
+}
+
+:root::-webkit-scrollbar-track {
+    border-radius: 50px;
+    margin: -0.2em 0;
+}
+
+:root::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 50px;
+}
+
+
 body {
+  background-color: var(--main-primary-dark);
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  width: 100%;
+  overflow-x: hidden;
+  font-family: sans-serif;
 }
 
 a {
@@ -13,4 +45,20 @@ a {
 
 * {
   box-sizing: border-box;
+  
+}
+
+*::-webkit-scrollbar {
+  width:8px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 50px;
+  margin: -0.2em 0;
+}
+
+*::-webkit-scrollbar-thumb {
+background: #888;
+border-radius: 50px;
 }
