--- a/components/styles/xplorestyles/banner.module.css
+++ b/components/styles/xplorestyles/banner.module.css
@@ -29,6 +29,8 @@
     left: 0;
     width: 100%;
     height: 80vh;
+    max-height: 80vh;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,8 +43,11 @@
 
 .videocon video {
     width: 100%;
-    min-height: 100%;
+    min-width: 100%;
+    min-height: 80vh;
     max-height: 80vh;
+    max-height: 80vh;
+    overflow: hidden;
     object-fit: cover;
     top: 0;
     position: absolute;
