--- a/components/styles/xplorestyles/banner.module.css
+++ b/components/styles/xplorestyles/banner.module.css
@@ -18,8 +18,9 @@
     left: 0;
     height:  80vh;
     width: 100%;
-    opacity: 0.5;
-    background-color: var(--main-primary-dark);
+    mix-blend-mode: multiply;
+    opacity: 0.7;
+    background-color: var(--main-primary);
 
 }
 
