changed bookstore viewmore container to be more responsive

--- a/components/styles/bookstore.module.css
+++ b/components/styles/bookstore.module.css
@@ -216,8 +216,10 @@
 
 .viewmore .viewmoreinnercon {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
+    flex: 1;
 }
 
 .viewmore .viewmorebtncon {
